# codec.cpp

./: .gitignore  .gitmodules  AGENT.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  requirements-e2e.txt  requirements.txt
.github/workflows/: ci.yml  e2e.yml
benchmarks/: baseline.json  bluemagpie_cfm_baseline.json
cmake/: SetupBarbetLlama.cmake  SetupTtsBackbone.cmake
common/: audio_lm.cpp  codec_common.h  tts_runner.cpp  tts_runner.h
docs/: audio_in_implementation.md  audio_lm_extensions.md  audio_speaker_encoders.md  bluemagpie_plan.md  chatterbox.md  chatterbox_t3_plan.md  codec_common_api.md  codec_lm.md  codec_lm_verification.md  tts_cli.md  tts_remaining_plan.md
examples/: codec-batch-decode.cpp  codec-cli.cpp  codec-lm-cli.cpp  inspect-codec.cpp  test_codec_common_cont.cpp  tts-cli.cpp  tts.py
examples/utils/: npy_io.cpp  npy_io.h  wav_io.cpp  wav_io.h
include/: codec.h  codec_lm.h
patches/: barbet-llamacpp-README.md
scripts/: build_all_backends.sh  compare_gguf_vs_hf_codebook_embed.py  compare_mimi_latent.py  compare_mimi_post_latent.py  compare_mimi_rvq_debug.py  compare_mimi_sem_l0t0.py  compare_mimi_transformer.py  convert-backbone-to-gguf.py  convert-to-gguf.py  convert_csm_backbone_to_gguf.py  diagnose_gguf_shape.py  download_dac_weights.py  dump_mimi_latent_hf.py  dump_mimi_post_latent_hf.py  dump_mimi_rvq_debug_hf.py  dump_mimi_transformer_hf.py  extract_csm_backbone.py  extract_qwen3_backbone.py  extract_qwen3_tts_backbone.py  inspect_dac_hf.py  inspect_mimi_hf.py  regression_batch_decode.sh  regression_dac.sh  regression_mimi.sh  regression_mimi_latent.sh  regression_mimi_post_latent.sh  regression_mimi_rvq_debug.sh  regression_mimi_sem_l0t0.sh  regression_mimi_transformer_debug.sh  regression_wavtokenizer.sh  requirements.txt  test_encode_decode.py  test_gguf_codebook_embed.sh  test_mimi_upsample_vs_hf.sh
scripts/converters/: __init__.py  base.py  bluemagpie.py  chatterbox.py  csm.py  dac.py  mimi.py  moshi.py  moss_audio.py  nemo_nano_codec.py  neucodec.py  pocket_tts.py  qwen3_tts_tokenizer.py  snac.py  soprano.py  wavtokenizer.py  xcodec2.py  xy_tokenizer.py
scripts/utils/: __init__.py  gguf_writer.py  quantization.py
src/: codec.cpp  codec_internal.h
src/debug/: dump.cpp  dump.h  stages.cpp  stages.h
src/lm/: bluemagpie_cfm.cpp  chatterbox_t3.cpp  flow_lm.cpp  lm.cpp  lm_internal.h  parallel_heads_delay.cpp  residual_depth_ar.cpp  speaker_chatterbox.cpp  speaker_chatterbox.h  speaker_qwen3_tts.cpp
src/models/: bluemagpie_audiovae.cpp  bluemagpie_blocks.cpp  bluemagpie_blocks.h  chatterbox_s3g.cpp  chatterbox_s3t.cpp  dac.cpp  dac.h  mimi.cpp  mimi.h  moss_audio.cpp  (+11 more)
tools/: README_benchmark.md  benchmark.py  benchmark_models.json
(+75 files in other folders)
